--- a/src/app/authentication/forgot-pass/forgot-pass.component.html
+++ b/src/app/authentication/forgot-pass/forgot-pass.component.html
@@ -3,6 +3,6 @@
 <form #fg_form="ngForm" class="form-group" (ngSubmit)="onsubmit()"  novalidate>
   Enter Your Email:<input type="text" class="form-control" name="email" ngModel  #email="ngModel" ><br><br>
   <button class="btn btn-primary" routerLink="/main">Reset Password</button>&nbsp;
-  <button class="btn btn-primary" routerLink="/auth">Back</button>
+  <button class="btn btn-primary" routerLink="/">Back</button>
 </form>
 </div>
