--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -12,7 +12,7 @@
             <small class="danger-text" *ngIf="password.errors.required">Password is required.</small>
             <small class="danger-text" *ngIf="password.errors.minlength">Password must be at least 3 characters long.</small>
         </div><br>
-        <a routerLink="/auth/forgot_pass">Forgot Password?</a><br><br>
+        <a routerLink="/forgot_pass">Forgot Password?</a><br><br>
         <button class="btn btn-primary btn-block round-btn">Sign in</button><br>
     </form>
-</div>
+</div> 
