--- a/src/app/main/Dashboard/Components/admin/admin.component.html
+++ b/src/app/main/Dashboard/Components/admin/admin.component.html
@@ -37,11 +37,11 @@
                     <small *ngIf="create_user.controls.role.errors.required" class="danger-text">required..</small>
                 </div><br>
                 <label>Office</label><br>
-                <input type="text" class="form-control" formControlName="office"><br>
+                <select type="text" class="form-control" formControlName="office"></select><br>
                 <label>Region</label><br>
-                <input type="text" class="form-control" formControlName="region"><br>
+                <select type="text" class="form-control" formControlName="region"></select><br>
                 <label>Division</label><br>
-                <input type="text" class="form-control" formControlName="division"><br>
+                <select type="text" class="form-control" formControlName="division"></select><br>
                 <label>Username</label><br>
                 <input type="text" class="form-control" formControlName="username">
                 <div
