--- a/src/app/main/Dashboard/Components/home/home.component.html
+++ b/src/app/main/Dashboard/Components/home/home.component.html
@@ -9,11 +9,30 @@
         <br><br>
         <div class="container-fluid">
             <div class="row">
-              <div class="col-md-3 three_boxes ">Project in Progress ..</div>
-              <div class="col-md-3 three_boxes col-md-offset-1">Project Start This Year</div>
-              <div class="col-md-3 three_boxes col-md-offset-1">Project Ending This Year</div>
+              <div class="col-md-3 three_boxes " style="border-bottom: 1px solid  #d0d3d4 ">Project in Progress
+                <div >On going</div>  
+              </div>
+              <div class="col-md-3 three_boxes col-md-offset-1">Project Start 
+                <div >On going</div>
+              </div>
+              <div class="col-md-3 three_boxes col-md-offset-1">Project End
+                <div >On going</div>
+              </div>
             </div>
         </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-3 three_boxes ">
+              <h3 style="font-weight:bold">36</h3>
+            </div>
+            <div class="col-md-3 three_boxes col-md-offset-1">
+              <h3 style="font-weight:bold">36</h3>
+            </div>
+            <div class="col-md-3 three_boxes col-md-offset-1">
+              <h3 style="font-weight:bold">36</h3>
+            </div>
+          </div>
+      </div>
         <br><br>
     </div> 
     <div class="col-md-6 right_div">
@@ -21,12 +40,15 @@
         <h2>Current Project Summary</h2>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-3 three_boxes ">Project in Progress ..</div>
-            <div class="col-md-3 three_boxes col-md-offset-1">Project Start This Year</div>
-            <div class="col-md-3 three_boxes col-md-offset-1">Project Ending This Year</div>
+            <div class="col-md-3 three_boxes ">Project in Progress</div>
+            <div class="col-md-3 three_boxes col-md-offset-1">Project Start </div>
+            <div class="col-md-3 three_boxes col-md-offset-1">Project End </div>
           </div>
           <br><br>
       </div>
     </div>
   </div>
 </div>
+
+
+
