--- a/src/app/main/Dashboard/navbar/navbar.component.html
+++ b/src/app/main/Dashboard/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <ul class="dropdown-menu">
           <li><a >Project Log</a></li>
           <li><a >Project Team</a></li>
-          <li><a >Quick Viiews</a></li>
+          <li><a >Quick Views</a></li>
         </ul>
       </li>
       <li class="dropdown">
